Task: Add userForm.php

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 		<main>
 			<section class="mainContainer">
 				<h1>Quiz programistyczny</h1>
-				<a href="../php/quiz.php" class="submitButton">Rozpocznij quiz</a>
+				<a href="../php/userForm.php" class="submitButton">Rozpocznij quiz</a>
 			</section>
 		</main>
 		<footer>
