--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Strona główna</title>
-		<link rel="stylesheet" href="../css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<main>
 			<section class="mainContainer">
 				<h1>Quiz programistyczny</h1>
-				<a href="../php/userForm.php" class="submitButton">Rozpocznij quiz</a>
+				<a href="php/userForm.php" class="submitButton">Rozpocznij quiz</a>
 			</section>
 		</main>
 		<footer>
@@ -18,7 +18,7 @@
 				Copyright© 2024
 				<a href="https://cksulechow.pl/" target="_blank">CKZiU Sulechow</a>
 			</p>
-			<span class="footerRight">Szymon Urbański 2TA</span>
+			<span class="footerRight">XXX media</span>
 		</footer>
 	</body>
 </html>
