--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				Copyright© 2024
 				<a href="https://cksulechow.pl/" target="_blank">CKZiU Sulechow</a>
 			</p>
-			<span class="footerRight">XXX media</span>
+			<span class="footerRight">&copy; Vivid Media 2025</span>
 		</footer>
 	</body>
 </html>
