--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Strona główna</title>
-		<link rel="stylesheet" href="css/style.css" />
-	</head>
-	<body>
-		<main>
-			<section class="mainContainer">
-				<h1>Quiz programistyczny</h1>
-				<a href="php/userForm.php" class="submitButton">Rozpocznij quiz</a>
-			</section>
-		</main>
-		<footer>
-			<p class="footerLeft">
-				Copyright© 2024
-				<a href="https://cksulechow.pl/" target="_blank">CKZiU Sulechow</a>
-			</p>
-			<span class="footerRight">&copy; Vivid Media 2025</span>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Strona główna</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      h1 {
+        color: rgb(63, 60, 60);
+        font-size: 1.5rem;
+        margin-bottom: 30px;
+      }
+      @media (max-width: 447px) {
+        header {
+          height: 15%;
+        }
+        footer {
+          height: 10%;
+        }
+        .footerLeft,
+        .footerRight {
+          margin: 5px 0;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <section class="mainContainer">
+        <h1>Quiz programistyczny</h1>
+        <a href="php/userForm.php" class="submitButton">Rozpocznij quiz</a>
+      </section>
+    </main>
+    <footer>
+      <p class="footerLeft">
+        Copyright© 2024
+        <a href="https://cksulechow.pl/" target="_blank">CKZiU Sulechow</a>
+        Copyright© Vivid Media 2025
+      </p>
+      
+    </footer>
+  </body>
 </html>
